update main show photo, delete text from home & works page, make stuck on home bigger

--- a/src/screens/styles/Home.css
+++ b/src/screens/styles/Home.css
@@ -130,7 +130,8 @@ h3 {
   height: 100%;
 }
   .coming-soon-title {
-    font-size: 40px;
+    font-size: 60px;
+    font-weight: 700;
   }
   .tickets {
       padding: 3%;
